fix for scroll jumping on headlessui modal

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -59,9 +59,12 @@
   font-weight: normal;
 }
 
-html {
-  scroll-behavior: smooth;
+@media(min-width: 1024px) {
+  html {
+    scroll-behavior: smooth;
+  }
 }
+
 
 body {
   min-height: 100vh;
